added loading screen, few extra things to make ui look nicer, will now attempt to work with spotify api

--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <style>
+      ::-webkit-scrollbar {
+    display: none;
+}
+    </style>
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -26,7 +31,8 @@
     -->
     <title>React App</title>
   </head>
-  <body>
+  <body
+    style="-webkit-app-region: drag;">
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
