--- a/public/loading.html
+++ b/public/loading.html
@@ -19,7 +19,7 @@
         width: 13px;
         height: 13px;
         border-radius: 50%;
-        background: #fff;
+        background: #ffffff;
         animation-timing-function: cubic-bezier(0, 1, 1, 0);
     }
     .lds-ellipsis div:nth-child(1) {
